--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "deploy-storybook": "gh-pages -d ./storybook-static -t true"
+    "storybook:build": "storybook build",
+    "storybook:deploy": "echo. > ./storybook-static/.nojekyll && gh-pages -d ./storybook-static -t true"
    },
   "dependencies": {
     "luxon": "^3.4.3",
