--- a/package.json
+++ b/package.json
@@ -1,9 +1,30 @@
 {
   "name": "multi-event",
   "homepage": "https://mehrizi.github.io/multi-event",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.1.0",
   "type": "module",
+  "keywords": [
+    "react",
+    "components",
+    "calendar",
+    "event"
+  ],
+  "author": "Mahdi Mehrizi Sani",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mehrizi/multi-event"
+  },
+  "bugs": {
+    "url": "https://github.com/mehrizi/multi-event/issues"
+  },
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,12 +33,14 @@
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "storybook:deploy": "echo. > ./storybook-static/.nojekyll && gh-pages -d ./storybook-static -t true"
-   },
+  },
   "dependencies": {
     "luxon": "^3.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "yarn": "^1.22.19"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "7.5.1",
@@ -42,6 +65,7 @@
     "sass": "^1.69.3",
     "storybook": "7.5.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.5.0",
+    "vite-plugin-dts": "^3.6.3"
   }
 }
