--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,14 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "multi-event-library": [ "./src/assets/Components/index.ts" ]
+    },
+    "typeRoots": [
+      "node_modules/@types",
+      "src/assets/Components/index.ts"
+    ]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
