--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -17,16 +17,16 @@ jobs:
     name: Create new version ${{ github.event.inputs.version }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2  # Update to v2
         with:
           ref: main
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Use the latest LTS Node.js
+        uses: actions/setup-node@v2  # Update to v2
         with:
-          node-version: 20.x
+          node-version: 'lts'
 
       - name: Generate new version
         run: npm version ${{ github.event.inputs.version }}
