--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "multi-event-calendar",
   "homepage": "https://mehrizi.github.io/multi-event",
   "private": false,
-  "version": "0.3.1",
+  "version": "0.4.0",
   "type": "module",
   "keywords": [
     "react",
@@ -44,24 +44,26 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
+    "storybook:test": "test-storybook",
     "storybook:build": "storybook build",
     "storybook:deploy": "echo. > ./storybook-static/.nojekyll && gh-pages -d ./storybook-static -t true"
   },
   "peerDependencies": {
+    "luxon": "^3.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "luxon": "^3.4.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "yarn": "^1.22.19",
     "@storybook/addon-essentials": "7.5.1",
-    "@storybook/addon-interactions": "7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
     "@storybook/addon-links": "7.5.1",
     "@storybook/addon-onboarding": "1.0.8",
     "@storybook/blocks": "7.5.1",
+    "@storybook/jest": "^0.2.3",
     "@storybook/react": "7.5.1",
     "@storybook/react-vite": "7.5.1",
-    "@storybook/testing-library": "0.2.2",
+    "@storybook/test-runner": "^0.15.1",
+    "@storybook/testing-library": "^0.2.2",
     "@types/luxon": "^3.3.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -73,10 +75,12 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.15",
     "gh-pages": "^6.0.0",
+    "playwright": "^1.40.0",
     "sass": "^1.69.3",
     "storybook": "7.5.1",
     "typescript": "^5.0.2",
     "vite": "^4.5.0",
-    "vite-plugin-dts": "^3.6.3"
+    "vite-plugin-dts": "^3.6.3",
+    "yarn": "^1.22.19"
   }
 }
