--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "multi-event-calendar",
   "homepage": "https://mehrizi.github.io/multi-event",
   "private": false,
-  "version": "0.5.0",
+  "version": "0.7.0",
   "type": "module",
   "keywords": [
     "react",
@@ -43,6 +43,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "storybook": "storybook dev -p 6006",
     "storybook:test": "test-storybook",
     "storybook:build": "storybook build",
@@ -64,6 +66,8 @@
     "@storybook/react-vite": "7.5.1",
     "@storybook/test-runner": "^0.15.1",
     "@storybook/testing-library": "^0.2.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/luxon": "^3.3.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -75,12 +79,14 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.15",
     "gh-pages": "^6.0.0",
+    "jsdom": "^23.0.1",
     "playwright": "^1.40.0",
     "sass": "^1.69.3",
     "storybook": "7.5.1",
     "typescript": "^5.0.2",
     "vite": "^4.5.0",
     "vite-plugin-dts": "^3.6.3",
+    "vitest": "^1.0.2",
     "yarn": "^1.22.19"
   }
 }
