--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:dev": "vitest watch",
     "coverage": "vitest run --coverage",
     "storybook": "storybook dev -p 6006",
     "storybook:test": "test-storybook",
